update: fix logo sizing and overflow in terminal on mobile, tweak height of top wrapper for scroll overflow

--- a/src/styles/components/_set-times.scss
+++ b/src/styles/components/_set-times.scss
@@ -214,7 +214,7 @@ address {
     grid-template-columns: 5fr min-content;
     position: relative;
     gap: 0.5rem;
-    align-items: center;
+    align-items: flex-start;
 
     @include base.lg {
         font-size: 0.7rem;
@@ -232,8 +232,8 @@ address {
         visibility: hidden;
         display: flex;
         position: relative;
-        height: 90%;
-        width: auto;
+        width: 50px;
+        // align-items:center;
         // justify-content: center;
         // align-items: center;
 
@@ -256,7 +256,12 @@ address {
             // height: 1rem;
             // width: 100%;
             // width: 200px;
+            height: 50px;
             max-width: unset;
+
+            @include base.lg {
+                height: unset;
+            }
         }
 
     }
@@ -304,7 +309,7 @@ address {
     color: base.$green;
 
     @include base.lg {
-        grid-template-columns: 1fr 1fr 2fr 4fr;
+        grid-template-columns: 1fr 1fr 1fr 3fr;
         grid-area: c;
     }
 
